; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_utils.c_KeyboardFlushKeyboardQueue.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_utils.c_KeyboardFlushKeyboardQueue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OUTPUT_BUFFER_FULL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @KeyboardFlushKeyboardQueue() #0 {
  %1 = call i32 @KeStallExecutionProcessor(i32 10)
  br label %2

2:                                                ; preds = %7, %0
  %3 = call i32 (...) @GetKeyStatus()
  %4 = load i32, i32* @OUTPUT_BUFFER_FULL, align 4
  %5 = and i32 %3, %4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %2
  %8 = call i32 (...) @GetKeyData()
  %9 = call i32 @KeStallExecutionProcessor(i32 10)
  br label %2

10:                                               ; preds = %2
  ret void
}

declare dso_local i32 @KeStallExecutionProcessor(i32) #1

declare dso_local i32 @GetKeyStatus(...) #1

declare dso_local i32 @GetKeyData(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
